# ADS-lab2-matrix

./: CMakeLists.txt
Matrix/: main.cpp
MatrixLib/: Matrix.h  TriangleMatrix.h
VectorLib/: Vector.cpp  Vector.h
